--- a/backEnd/pyproject.toml
+++ b/backEnd/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp>=3.13.2",
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
     "email-validator>=2.3.0",
@@ -17,6 +18,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-jose>=3.5.0",
+    "python-multipart>=0.0.21",
+    "redis>=7.1.0",
     "sqlalchemy[asyncio]>=2.0.45",
     "tzdata>=2025.3",
     "uvicorn[standard]>=0.40.0",
@@ -26,5 +29,63 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "black>=25.12.0",
+    "isort>=7.0.0",
     "pre-commit>=4.5.1",
 ]
+
+
+[tool.black]
+line-length = 100
+exclude = '''
+/(
+    \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+    | __pycache__
+    | .*/__init__.py
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+line_length = 100
+use_parentheses = true
+ensure_newline_before_comments = true
+remove_redundant_aliases = true
+combine_as_imports = true
+combine_star = true
+skip_glob = [
+    "*/__init__.py",
+    "**/__pycache__/*",
+    ".venv/*",
+    "venv/*",
+    "env/*"
+]
+skip = [
+    ".gitignore",
+    ".dockerignore",
+    ".env",
+    ".venv",
+    "venv",
+    "env",
+    "__init__.py",
+]
+extend_skip = [".md", ".json"]
+sections = [
+    "FUTURE",
+    "STDLIB",
+    "THIRDPARTY",
+    "FIRSTPARTY",
+    "LOCALFOLDER"
+]
+default_section = "THIRDPARTY"
