Implement report service with duplicate detection and moderation workflow

--- a/backEnd/.env.example
+++ b/backEnd/.env.example
@@ -22,10 +22,22 @@ ADMIN_PASSWORD=admin
 ADMIN_FIRST_NAME=Admin
 ADMIN_LAST_NAME=User
 
-# redis
+# Redis
 REDIS_HOST=online-forum-redis
 REDIS_PORT=6379
 REDIS_PASS=1234
+REDIS_USER=redis_user
+REDIS_BASE=0
+REDIS_MAX_POOL_CONNECTIONS=20
+REDIS_SOCKET_CONNECT_TIMEOUT=5
+REDIS_SOCKET_TIMEOUT=5
+
+# Redis Cache TTLs in seconds
+CACHE_ENABLED=False
+CACHE_TTL_DEFAULT=300
+
+# Rate Limiting (requests per window)
+RATE_LIMIT_ENABLED=False
 
 # Security
 SECRET_KEY=your-secret-key-here-make-it-very-long-and-random
